Added doctype and ga tracking

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Clicker Heroes Gilding Calculator</title>
@@ -11,7 +12,7 @@
 <body>
 
 <div id="import">
-    <textarea id="input" placeholder="Copy the content of your savefile here!"></textarea><br>
+    <textarea id="input" placeholder="Paste your save data here!"></textarea><br>
     <button id="decodeButton">Import</button>
 </div>
 
@@ -57,6 +58,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-412219-23', 'auto');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
 </script>
 </body>
