removed unused span

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>Next heroes</p>
     <ul id="nextHeroes">
         <li rv-each-hero="nextHeroes">
-            <span class="name">{ hero.name }</span>
+            { hero.name }
         </li>
     </ul>
 </div>
