--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="list">
-    <p>Next heroes</p>
+    <p>Upcoming gilds</p>
     <ul id="nextHeroes">
         <li rv-each-hero="nextHeroes">
             { hero.name }
