efficiency default sorting

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="list">
-    <p>Your heroes <span id="sort" class="arrow-down" title="Sort the heroes by max efficiency"></span></p>
+    <p>Your heroes <span id="sort" class="arrow-up"></span></p>
     <ul id="heroes">
         <li rv-each-hero="heroes" rv-on-click="controller.deGild" rv-flash="hero.epicLevel">
             <span class="name">{ hero.name }</span>
