--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <p>Information</p>
     <ul id="info">
         <li id="souls">{ savegame.heroSouls } Souls</li>
-        <li id="spentSouls">0 spent</li>
+        <li id="spentSouls">0 Souls spent</li>
+        <li id="degilds">0 Heroes degilded</li>
+        <li>&nbsp;</li>
+        <li id="autoDegild">auto degild</li>
+        <li id="speed">degild faster (1 per second)</li>
     </ul>
 </div>
 
