--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <title>Clicker Heroes Gilding Calculator</title>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href="css/jquery.nouislider.min.css" type="text/css" rel="stylesheet">
     <link href="css/styles.css" type="text/css" rel="stylesheet">
     <script type="application/javascript" src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rivets/0.6.10/rivets.min.js"></script>
+    <script type="application/javascript" src="js/jquery.nouislider.min.js"></script>
+    <script type="application/javascript" src="js/jquery.liblink.js"></script>
     <script type="application/javascript" src="js/main.js"></script>
 </head>
 <body>
@@ -19,11 +22,13 @@
 <div class="list">
     <p>Information</p>
     <ul id="info">
+        <li id="gildies">0 gilded Heroes</li>
         <li id="souls">{ savegame.heroSouls } Souls</li>
         <li id="spentSouls">0 Souls spent</li>
         <li id="degilds">0 Heroes degilded</li>
         <li>&nbsp;</li>
-        <li id="autoDegild">auto degild</li>
+        <li id="autoDegilding">auto degilding</li>
+        <li id="autoDegild">start</li>
         <li id="speed">degild faster (1 per second)</li>
     </ul>
 </div>
@@ -34,6 +39,7 @@
         <li rv-each-hero="heroes" rv-on-click="controller.deGild" rv-flash="hero.epicLevel">
             <span class="name">{ hero.name }</span>
             <span class="cost">{ hero.epicLevel }</span>
+            <div class="slider-range"></div>
         </li>
     </ul>
 </div>
