fixed menu and clicks

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <li id="spentSouls">0 Souls spent</li>
         <li id="degilds">0 Heroes degilded</li>
         <li>&nbsp;</li>
-        <li id="autoDegilding">auto degilding</li>
-        <li id="autoDegild">start</li>
+        <li id="autoDegilding">edit gild priority</li>
+        <li id="autoDegild">start auto degild</li>
         <li id="speed">degild faster (1 per second)</li>
     </ul>
 </div>
