code cleanup, added reddit link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <li id="autoDegilding">edit gild priority</li>
         <li id="autoDegild">start auto degild</li>
         <li id="speed">degild faster (1 per second)</li>
+        <li>&nbsp;</li>
+        <li id="reddit"><a href="http://www.reddit.com/r/ClickerHeroes/comments/2iqfmm/clicker_heroes_gilding_calculator/">CHGC on reddit</a> </li>
     </ul>
 </div>
 
