added ancients, refactored seed, improved auto degilding via lookahead

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li id="autoDegild">start auto degild</li>
         <li id="speed">degild faster (1 per second)</li>
         <li>&nbsp;</li>
-        <li id="reddit"><a href="http://www.reddit.com/r/ClickerHeroes/comments/2iqfmm/clicker_heroes_gilding_calculator/">CHGC on reddit</a> </li>
+        <li id="reddit"><a href="http://www.reddit.com/r/ClickerHeroes/comments/2iqfmm/clicker_heroes_gilding_calculator/" target="_blank">CHGC on reddit</a> </li>
     </ul>
 </div>
 
@@ -63,6 +63,7 @@
         </li>
     </ul>
 </div>
+
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
