--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     <p>Information</p>
     <ul id="info">
         <li id="gildies">0 gilded Heroes</li>
-        <li id="souls">{ savegame.heroSouls } Souls</li>
+        <li id="souls">0 Souls</li>
         <li id="spentSouls">0 Souls spent</li>
         <li id="degilds">0 Heroes degilded</li>
         <li>&nbsp;</li>
         <li id="autoDegilding">edit gild priority</li>
+        <li id="resetSlider">reset gild priorities</li>
         <li id="autoDegild">start auto degild</li>
         <li id="speed">degild faster (1 per second)</li>
         <li>&nbsp;</li>
