--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li id="degilds">0 Heroes degilded</li>
         <li>&nbsp;</li>
         <li id="autoDegilding">edit gild priority</li>
-        <li id="resetSlider">reset gild priorities</li>
+        <li id="resetSlider">reset gild priority</li>
         <li id="autoDegild">start auto degild</li>
         <li id="speed">degild faster (1 per second)</li>
         <li>&nbsp;</li>
