added calculator reset

--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
         <li id="souls">0 Souls</li>
         <li id="spentSouls">0 Souls spent</li>
         <li id="degilds">0 Heroes degilded</li>
+        <li id="degildsPerSecond">0 degilds per second</li>
+        <li>&nbsp;</li>
+        <li id="autoDegild">start auto degild</li>
+        <li id="speedFaster">degild faster</li>
+        <li id="speedSlower">degild slower</li>
         <li>&nbsp;</li>
         <li id="autoDegilding">edit gild priority</li>
         <li id="resetSlider">reset gild priority</li>
-        <li id="autoDegild">start auto degild</li>
-        <li id="speed">degild faster (1 per second)</li>
+        <li>&nbsp;</li>
+        <li id="reset">reset calculator</li>
         <li>&nbsp;</li>
         <li id="reddit"><a href="http://www.reddit.com/r/ClickerHeroes/comments/2iqfmm/clicker_heroes_gilding_calculator/" target="_blank">CHGC on reddit</a> </li>
     </ul>
