added damage/dps calculation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li id="souls">0 Souls</li>
         <li id="spentSouls">0 Souls spent</li>
         <li id="degilds">0 Heroes degilded</li>
+        <li id="dps">100% dps</li>
         <li id="degildsPerSecond">0 degilds per second</li>
         <li>&nbsp;</li>
         <li id="autoDegild">start auto degild</li>
