--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href="css/jquery.nouislider.min.css" type="text/css" rel="stylesheet">
     <link href="css/styles.css" type="text/css" rel="stylesheet">
-    <script type="application/javascript" src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rivets/0.6.10/rivets.min.js"></script>
     <script type="application/javascript" src="js/jquery.nouislider.min.js"></script>
@@ -16,7 +15,7 @@
 
 <div id="import">
     <textarea id="input" placeholder="Paste your save data here!"></textarea><br>
-    <button id="decodeButton">Import</button>
+    <button id="importButton">Import</button>
 </div>
 
 <div class="list">
@@ -33,7 +32,7 @@
         <li id="speedFaster">degild faster</li>
         <li id="speedSlower">degild slower</li>
         <li>&nbsp;</li>
-        <li id="autoDegilding">edit gild priority</li>
+        <li id="editPriorities">edit gild priority</li>
         <li id="resetSlider">reset gild priority</li>
         <li>&nbsp;</li>
         <li id="reset">reset calculator</li>
@@ -70,13 +69,9 @@
         </li>
     </ul>
 </div>
-
+<script async src='//www.google-analytics.com/analytics.js'></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     ga('create', 'UA-412219-23', 'auto');
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
