--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Clicker Heroes Gilding Calculator</title>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href="css/jquery.nouislider.min.css" type="text/css" rel="stylesheet">
-    <link href="css/styles.css" type="text/css" rel="stylesheet">
+    <link href="css/styles.css?v=0.9.1" type="text/css" rel="stylesheet">
+    <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rivets/0.6.10/rivets.min.js"></script>
     <script type="application/javascript" src="js/jquery.nouislider.min.js"></script>
