added savegame export

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/styles.css?v=0.10.0" type="text/css" rel="stylesheet">
     <script type="application/javascript" src="http://d3js.org/d3.v3.js"></script>
     <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
+    <script type="application/javascript" src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rivets/0.6.10/rivets.min.js"></script>
     <script type="application/javascript" src="js/jquery.nouislider.min.js"></script>
@@ -34,11 +35,11 @@
         <li id="degildsPerSecond">0 degilds per second</li>
         <li id="speedFaster">degild faster</li>
         <li id="speedSlower">degild slower</li>
-        <li>&nbsp;</li>
         <li id="editPriorities">edit gild priority</li>
         <li id="resetSlider">reset gild priority</li>
         <li>&nbsp;</li>
         <li id="reset">reset calculator</li>
+        <li id="export"><a id="dl" href="#">export savegame</a></li>
         <li>&nbsp;</li>
         <li id="reddit"><a href="http://www.reddit.com/r/ClickerHeroes/comments/2iqfmm/clicker_heroes_gilding_calculator/" target="_blank">CHGC on reddit</a> </li>
     </ul>
