--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Clicker Heroes Gilding Calculator</title>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href="css/jquery.nouislider.min.css" type="text/css" rel="stylesheet">
-    <link href="css/styles.css?v=0.10.0" type="text/css" rel="stylesheet">
+    <link href="css/styles.css?v=0.11.0" type="text/css" rel="stylesheet">
     <script type="application/javascript" src="http://d3js.org/d3.v3.js"></script>
     <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
     <script type="application/javascript" src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
@@ -12,7 +12,7 @@
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rivets/0.6.10/rivets.min.js"></script>
     <script type="application/javascript" src="js/jquery.nouislider.min.js"></script>
     <script type="application/javascript" src="js/jquery.liblink.js"></script>
-    <script type="application/javascript" src="js/main.js"></script>
+    <script type="application/javascript" src="js/main.js?v=0.11.0"></script>
 </head>
 <body>
 
