--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Clicker Heroes Gilding Calculator</title>
+    <meta charset="UTF-8">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href="css/jquery.nouislider.min.css" type="text/css" rel="stylesheet">
     <link href="css/styles.css?v=0.11.0" type="text/css" rel="stylesheet">
-    <script type="application/javascript" src="http://d3js.org/d3.v3.js"></script>
+    <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
     <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
     <script type="application/javascript" src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
