fixed hero undefined. added e5 and bas64 shims.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href="css/jquery.nouislider.min.css" type="text/css" rel="stylesheet">
     <link href="css/styles.css?v=0.11.1" type="text/css" rel="stylesheet">
+    <script type="application/javascript" src="js/es5-shim.min.js"></script>
+    <script type="application/javascript" src="js/base64.min.js"></script>
+    <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
     <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
     <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
     <script type="application/javascript" src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
