--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,8 @@
 <head>
     <title>Clicker Heroes Gilding Calculator</title>
     <meta charset="UTF-8">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href="css/jquery.nouislider.min.css" type="text/css" rel="stylesheet">
-    <link href="css/styles.css?v=0.11.2" type="text/css" rel="stylesheet">
-    <script type="application/javascript" src="js/es5-shim.min.js"></script>
-    <script type="application/javascript" src="js/base64.min.js"></script>
-    <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
-    <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
-    <script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
-    <script type="application/javascript" src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
-    <script type="application/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rivets/0.6.10/rivets.min.js"></script>
-    <script type="application/javascript" src="js/jquery.nouislider.min.js"></script>
-    <script type="application/javascript" src="js/jquery.liblink.js"></script>
-    <script type="application/javascript" src="js/main.js?v=0.11.2"></script>
+    <link href="assets/css/styles.css?v=@@version" type="text/css" rel="stylesheet">
+    <script src="assets/js/main.js"></script>
 </head>
 <body>
 
