--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <title>Clicker Heroes Gilding Calculator</title>
     <meta charset="UTF-8">
     <link href="assets/css/styles.css?v=@@version" type="text/css" rel="stylesheet">
-    <script src="assets/js/main.js"></script>
 </head>
 <body>
 
@@ -65,6 +64,7 @@
         </li>
     </ul>
 </div>
+<script data-main="assets/js/main" src="../bower_components/requirejs/require.js"></script>
 <script async src='//www.google-analytics.com/analytics.js'></script>
 <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
