--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,22 @@
         <li id="degilds">0 Heroes degilded</li>
         <li id="dps">100% dps</li>
         <li id="stats"></li>
+        <li id="transport">
+
+            <span class="fontawesome-fast-backward disabled" title="Reset Calculator"></span>
+            <span class="fontawesome-backward disabled" title="Step backward"></span>
+            <span class="fontawesome-play" title="Start degilding"></span>
+            <span class="fontawesome-forward" title="Step forward"></span>
+            <!--<span class="fontawesome-fast-forward disabled"></span>-->
+            <span></span>
+            <span class="fontawesome-minus disabled" title="Degild slower"></span>
+            <span class="fontawesome-time" title="1 degild(s) per second"></span>
+            <span class="fontawesome-plus" title="Degild faster"></span>
+        </li>
         <li>&nbsp;</li>
-        <li id="autoDegild">start auto degild</li>
-        <li id="degildsPerSecond">0 degilds per second</li>
-        <li id="speedFaster">degild faster</li>
-        <li id="speedSlower">degild slower</li>
         <li id="editPriorities">edit gild priority</li>
         <li id="resetSlider">reset gild priority</li>
         <li>&nbsp;</li>
-        <li id="reset">reset calculator</li>
         <li id="export"><a id="dl" href="#">export savegame</a></li>
         <li>&nbsp;</li>
         <li id="reddit"><a href="http://www.reddit.com/r/ClickerHeroes/comments/2iqfmm/clicker_heroes_gilding_calculator/" target="_blank">CHGC on reddit</a> </li>
