--- a/src/src/index.html
+++ b/src/src/index.html
@@ -3,9 +3,12 @@
 <head>
     <title>Clicker Heroes Gilding Calculator</title>
     <meta charset="UTF-8">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic" type="text/css" rel="stylesheet">
-    <link href="http://weloveiconfonts.com/api/?family=fontawesome" type="text/css" rel="stylesheet">
-    <link href="assets/css/styles.css?v=0.14.2" type="text/css" rel="stylesheet">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+    <link href="assets/css/google_font.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/fontawesome.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/styles.css?v=@@version" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -72,8 +75,7 @@
         </li>
     </ul>
 </div>
-<script src="assets/js/main.js?v=0.14.2"></script>
-<script async src='//www.google-analytics.com/analytics.js'></script>
+<script data-main="assets/js/main" src="../bower_components/requirejs/require.js"></script>
 <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     ga('create', 'UA-412219-23', 'auto');
