Oops! forgot in incrmeent indexes! Also credit/github link adds

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,11 @@
 <head>
     <title>Clicker Heroes Gilding Calculator</title>
     <meta charset="UTF-8">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic" type="text/css" rel="stylesheet">
-    <link href="http://weloveiconfonts.com/api/?family=fontawesome" type="text/css" rel="stylesheet">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+    <link href="assets/css/google_font.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/fontawesome.css" type="text/css" rel="stylesheet">
     <link href="assets/css/styles.css?v=@@version" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -41,6 +44,10 @@
         <li id="export"><a id="dl" href="#">export savegame</a></li>
         <li>&nbsp;</li>
         <li id="reddit"><a href="http://www.reddit.com/r/ClickerHeroes/comments/2iqfmm/clicker_heroes_gilding_calculator/" target="_blank">CHGC on reddit</a> </li>
+        <li>&nbsp;</li>
+	<li id="github1"><a href="https://github.com/Kingdud/gilding">CHCG (Kingdud's fork) on github</a></li>
+        <li>&nbsp;</li>
+	<li id="github2"><a href="https://github.com/riebel/gilding">CHCG (Riebel's original version) on github</a></li>
     </ul>
 </div>
 
@@ -73,7 +80,6 @@
     </ul>
 </div>
 <script data-main="assets/js/main" src="../bower_components/requirejs/require.js"></script>
-<script async src='//www.google-analytics.com/analytics.js'></script>
 <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     ga('create', 'UA-412219-23', 'auto');
